# iconimation

./: .gitignore  Cargo.toml  README.md  demo.html  dump_motion.py  eSpring.html  makedemo.sh
iconimation/: Cargo.toml
iconimation-cli/: Cargo.toml
iconimation-cli/src/: main.rs
iconimation-viz/: Cargo.toml
iconimation-viz/src/: main.rs
iconimation-wasm/: Cargo.toml  animate.js  wasm-demo.html
iconimation-wasm/src/: lib.rs
iconimation/src/: android.rs  animate.rs  animate_legacy.rs  animated_glyph.rs  animated_vector_drawable.rs  animator.rs  bezop.rs  command.rs  debug_pen.rs  error.rs  ir.rs  lib.rs  ligate.rs  lottie.rs  plan.rs  shape_pen.rs  spring.rs  spring2cubic.rs  spring_fit.rs
resources/fonts/: README.md
resources/templates/: JustKeyframes.json  ScalePosition.json  ScaleRotate.json  ScaleRotatePosition.json  SparseKeyframes.json
