[workspace.dependencies]
kurbo = "0.10"
skrifa = "0.15.1"

# should be a clone of https://github.com/rsheeter/bodymovin-rs
#bodymovin = { path = "../bodymovin-rs" }
bodymovin = { git = "https://github.com/rsheeter/bodymovin-rs" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

thiserror = "1.0"

clap = { version = "4.4", features = ["derive"] }

[workspace]

resolver = "2"

members = [
	"iconimation",
	"iconimation-cli",
	"iconimation-fmt",
	"iconimation-viz",
	"iconimation-wasm",
]
