[package]
name = "iconimation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.65"

iconimation = { path = "../iconimation" }

serde_json.workspace = true
serde.workspace = true

kurbo.workspace = true
skrifa.workspace = true
bodymovin.workspace = true
