[package]
name = "iconimation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo.workspace = true
skrifa.workspace = true
bodymovin.workspace = true

regex = "1.10.3"

write-fonts = "0.21.0"  # pens

thiserror.workspace = true

ordered-float = "4.2"

serde = { version="1.0", features=["derive"]}